<resources>
    <string name="app_name">COPA AMÉRICA 2019</string>
    <string name="logo">Logo</string>
    <string name="positions_button">Positions</string>
    <string name="matches_button">Matches</string>
    <string name="searchplayer_button">Search Player</string>
    <string name="news_button">News</string>
    <string name="groups_button">Groups</string>
    <string name="brackets_button">Brackets</string>
    <string name="inbuton">Next Matches</string>
    <string name="nmurl">https://api.myjson.com/bins/by5np</string>
    <string name="add_qr">Add QR</string>
    <string name="scan_canceled">Scan canceled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
