<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:background="@drawable/backgroundgrey2"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/stackcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/posicionesButton"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="115dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="92dp"
                    android:layout_marginLeft="92dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="8dp"
                    android:background="#D1739F01"
                    android:text="@string/positions_button"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="@+id/matchButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/matchButton"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="115dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="92dp"
                    android:layout_marginRight="92dp"
                    android:background="#D2FCB60A"
                    android:text="@string/matches_button"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#00F00909"
                    android:textColorLink="#00F00606"
                    android:textIsSelectable="false"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/posicionesButton"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchPlayerButton"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="115dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="88dp"
                    android:layout_marginLeft="88dp"
                    android:background="#D2FCB60A"
                    android:text="@string/searchplayer_button"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/newsButton" />

                <Button
                    android:id="@+id/newsButton"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="115dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="#D1739F01"
                    android:text="@string/news_button"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toEndOf="@+id/searchPlayerButton"
                    tools:layout_editor_absoluteY="0dp" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/inbuton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#000F49"
                android:text="@string/inbuton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/searchPlayerButton"
                tools:layout_editor_absoluteX="-16dp" />

            <ListView
                android:id="@+id/nmListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80012A82" />

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
